@@ -23,40 +23,38 @@
 #include <geos/geom/Envelope.h>
 #include <geos/geom/Coordinate.h>
 
-using namespace geos::geom;
-
 namespace geos {
     namespace operation {
         namespace distance {
             class FacetSequence {
             private:
-                const CoordinateSequence *pts;
+                const geom::CoordinateSequence *pts;
                 const size_t start;
                 const size_t end;
 
                 /* Unlike JTS, we store the envelope in the FacetSequence so that it has a clear owner.  This is
                  * helpful when making a tree of FacetSequence objects (FacetSequenceTreeBuilder)
                  * */
-                Envelope env;
+                geom::Envelope env;
 
                 double computeLineLineDistance(const FacetSequence & facetSeq) const;
 
-                double computePointLineDistance(const Coordinate & pt, const FacetSequence & facetSeq) const;
+                double computePointLineDistance(const geom::Coordinate & pt, const FacetSequence & facetSeq) const;
 
                 void computeEnvelope();
 
             public:
-                const Envelope * getEnvelope() const;
+                const geom::Envelope * getEnvelope() const;
 
-                const Coordinate * getCoordinate(size_t index) const;
+                const geom::Coordinate * getCoordinate(size_t index) const;
 
                 size_t size() const;
 
                 bool isPoint() const;
 
-                double distance(const FacetSequence & facetSeq);
+                double distance(const FacetSequence & facetSeq) const;
 
-                FacetSequence(const CoordinateSequence *pts, size_t start, size_t end);
+                FacetSequence(const geom::CoordinateSequence *pts, size_t start, size_t end);
             };
 
         }
