@@ -9,6 +9,7 @@
 #include <cstdio>
 #include <cstdlib>
 #include <memory>
+#include <math.h>
 
 namespace tut
 {
@@ -81,7 +82,54 @@ namespace tut
         ensure_equals(ret, 1);
         ensure_distance(dist, 8.06225774829855, 1e-12);
     }
-    
+
+    GEOSGeometry* random_polygon(double x, double y, double r, size_t num_points)
+    {
+        std::vector<double> angle(num_points);
+        std::vector<double> radius(num_points);
+
+
+        for (size_t i = 0; i < num_points; i++) {
+            angle[i] = 2 * M_PI * std::rand() / RAND_MAX;
+            radius[i] = r*std::rand() / RAND_MAX;
+        }
+
+        std::sort(angle.begin(), angle.end());
+
+        GEOSCoordSequence* seq_1 = GEOSCoordSeq_create(num_points, 2);
+        for (size_t i = 0; i < num_points; i++)
+        {
+            size_t idx = i == (num_points - 1) ? 0 : i;
+
+            GEOSCoordSeq_setX(seq_1, i, x + radius[idx] * cos(angle[idx]));
+            GEOSCoordSeq_setY(seq_1, i, y + radius[idx] * sin(angle[idx]));
+        }
+
+        return GEOSGeom_createPolygon(GEOSGeom_createLinearRing(seq_1), NULL, 0);
+    }
+
+    /* Generate two complex polygons and verify that GEOSDistance and GEOSDistanceIndexed
+     * return identical results.
+     */
+    template<>
+    template<>
+    void object::test<2>()
+    {
+        std::srand(12345);
+
+        GEOSGeometry* g1 = random_polygon(-3, -8, 7, 1000);
+        GEOSGeometry* g2 = random_polygon(14, 22, 6, 500);
+
+        double d_raw, d_indexed;
+        ensure(GEOSDistance(g1, g2, &d_raw));
+        ensure(GEOSDistanceIndexed(g1, g2, &d_indexed));
+
+        ensure_equals(d_indexed, d_raw);
+
+        GEOSGeom_destroy(g1);
+        GEOSGeom_destroy(g2);
+    }
+
 
 } // namespace tut
 
