@@ -1,6 +1,9 @@
 Changes in 3.7.0
 YYYY-MM-DD
 
+- New things:
+  - CAPI: GEOSDistanceIndexed (#795, Dan Baston)
+
 Changes in 3.6.0
 2016-10-25
 
